--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"vite": "^7.2.2"
 	},
 	"dependencies": {
+		"@iconify/svelte": "^5.2.1",
 		"@tailwindcss/vite": "^4.1.17",
 		"js-cookie": "^3.0.5",
 		"lucide-svelte": "^0.563.0",
